# snake

./: Cargo.toml  README.md
src/: config.rs  game.rs  main.rs  snake.rs
