[package]
name = "snake"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.40.0"
piston_window = "0.120.0"
piston2d-opengl_graphics = "0.78.0"
rand = "0.7.3"
rusttype = "0.9.2"
